/*
 * Copyright (c) 2023 sixwaaaay.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *     http://www.apache.org/licenses/LICENSE-2.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package sixwaaaay.comment;
option go_package = "./;pb";

import "user.proto";

message Comment {
  int64 id = 1;
  string content = 2;
  int64 create_at = 3;
  sixwaaaay.user.User user = 4;
}

message CommentActionReq {
  int64 subject_id = 1;
  int64 video_id = 2;
  int32 action = 3;
  string comment_text = 4;
  int64 comment_id = 5;
}

message CommentActionReply {
  Comment comment = 3;
}

message CommentListReq {
  int64 subject_id = 1;
  int64 video_id = 2;
  int64 token = 3; // for pagination
  int32 limit = 4;
}

message CommentListReply {
  repeated Comment comment_list = 3;
}

service CommentService {
  rpc CommentAction(CommentActionReq) returns (CommentActionReply);
  rpc CommentList(CommentListReq) returns (CommentListReply);
}