/*
 * Copyright (c) 2023 sixwaaaay.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *     http://www.apache.org/licenses/LICENSE-2.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package sixwaaaay.video;
option go_package = "./;pb";

import "user.proto";


message Video {
  int64 id = 1;
  sixwaaaay.user.User author = 2;
  string title = 3;
  string description = 4;
  string cover_url = 5;
  string video_url = 6;
  bool is_liked = 7;
  int64 upload_time = 8;
  int32 duration = 9;
  string category = 10;
  repeated string tags = 11;
  int32 view_count = 12;
  int32 like_count = 13;
  int32 comment_count = 14;
  int32 share_count = 15;
  bool is_original = 16;
}

message GetVideosRequest {
  repeated int64 ids = 1;
  int64 subject_id = 2;
}

message GetVideosReply {
  repeated Video videos = 1;
}

message LikeActionRequest {
  int64 video_id = 1;
  int64 subject_id = 2;
  int32 action = 3;
}

message LikeActionReply {
}

message GetLikedVideosRequest {
  int64 user_id = 1;
  int64 subject_id = 2;
  int32 limit = 3;
  int64 token = 4; // for pagination purpose
}

message GetLikedVideosReply {
  repeated Video videos = 1;
}

message GetVideoRequest {
  int64 id = 1;
  int64 subject_id = 2;
}

message GetVideoReply {
  Video video = 1;
}

message GetUserVideosRequest {
  int64 user_id = 1;
  int64 subject_id = 2;
  int32 limit = 3;
  int64 token = 4; // for pagination purpose
}

message GetUserVideosReply {
  repeated Video videos = 1;
}

message CreateVideoRequest {
  string title = 1;
  string description = 2;
  string cover_url = 3;
  string video_url = 4;
  string category = 5;
  repeated string tags = 6;
  int32 duration = 7;
  int64 subject_id = 8;
}

message CreateVideoReply {}

message GetRecentVideoReq {
  int64 subject_id = 1;
  int32 limit = 2;
  int64 token = 3;
}
message GetRecentVideoResp {
  repeated Video videos = 1;
}

service VideoService {
  rpc GetVideo(GetVideoRequest) returns (GetVideoReply);
  rpc GetVideos(GetVideosRequest) returns (GetVideosReply);
  rpc LikeAction(LikeActionRequest) returns (LikeActionReply);
  rpc GetLikedVideos(GetLikedVideosRequest) returns (GetLikedVideosReply);
  rpc GetUserVideos(GetUserVideosRequest) returns (GetUserVideosReply);
  rpc CreateVideo(CreateVideoRequest) returns (CreateVideoReply);
  rpc GetRecentVideo(GetRecentVideoReq) returns (GetRecentVideoResp);
}